--- a/#src/_sections.html
+++ b/#src/_sections.html
@@ -1,4 +1,3 @@
-<main id="fullpage" class="main">
 <section class="page-section top">
     <div class="page-section__wrapper top__wrapper">
         <div class="container">
@@ -31,7 +30,7 @@
     </div>
 </section>
 
-<section data-menuanchor="products" class="page-section products">
+<section id="products" class="page-section products">
     <div class="page-section__wrapper">
         <div class="container">
             <h3 class="title products__title">Что такое Mavic 2 Pro?</h3>
@@ -79,7 +78,7 @@
     </div>
 </section>
 
-<section data-menuanchor="benefits" class="page-section benefits ">
+<section id="benefits" class="page-section benefits ">
     <div class="page-section__wrapper">
         <div class="container">
             <h3 class="title">Преимущества</h3>
@@ -151,7 +150,7 @@
     </div>
 </section>
 
-<section data-menuanchor="specification" class="page-section specification">
+<section id="specification" class="page-section specification">
     <div class="page-section__wrapper">
         <div class="container">
             <h3 class="title specification__title">Характеристики</h3>
@@ -195,7 +194,7 @@
     </div>
 </section>
 
-<section data-menuanchor="question" class="page-section question">
+<section id="question" class="page-section question">
     <div class="page-section__wrapper">
         <div class="container">
             <h3 class="title">Остались вопросы?</h3>
@@ -232,7 +231,7 @@
     </div>
 </section>
 
-<section data-menuanchor="contacts" class="page-section contacts">
+<section id="contacts" class="page-section contacts">
     <div class="page-section__wrapper">
         <div class="container">
             <h3 class="title">Контакты</h3>
@@ -295,4 +294,3 @@
         </div>
     </div>
 </section>
-</main>
